Add configuration options for non-inclusive word filter.